crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__interface__entity_interface_field-graph.snap
---
source: crates/engine/query-solver/src/tests/interface.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Query.users\" ]\n    2 [ label = \"User.age\" ]\n    3 [ label = \"NodeWithName.username\" ]\n    4 [ label = \"Root#a\", shape=parallelogram, color=dodgerblue ]\n    5 [ label = \"users#a\", shape=box, color=dodgerblue ]\n    6 [ label = \"age#a\", shape=box, color=dodgerblue ]\n    7 [ label = \"FedEntity#b\", shape=parallelogram, color=dodgerblue ]\n    8 [ label = \"username#b\", shape=box, color=dodgerblue ]\n    9 [ label = \"*NodeWithName.id\" ]\n    10 [ label = \"id#a\", shape=box, color=dodgerblue ]\n    0 -> 1 [ label = \"\" ]\n    1 -> 2 [ label = \"\" ]\n    1 -> 3 [ label = \"\" ]\n    0 -> 4 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 4 [ label = \"\", style=dashed,arrowhead=none ]\n    4 -> 5 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    5 -> 1 [ label = \"\", color=violet,arrowhead=none ]\n    5 -> 6 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    6 -> 2 [ label = \"\", color=violet,arrowhead=none ]\n    5 -> 7 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    1 -> 7 [ label = \"\", style=dashed,arrowhead=none ]\n    7 -> 8 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    8 -> 3 [ label = \"\", color=violet,arrowhead=none ]\n    1 -> 9 [ label = \"\" ]\n    7 -> 9 [ label = \"\", color=orangered,arrowhead=inv ]\n    5 -> 10 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    10 -> 9 [ label = \"\", color=violet,arrowhead=none ]\n}\n"
---
digraph {
    0 [ root]
    1 [ Query.users]
    2 [ User.age]
    3 [ NodeWithName.username]
    4 [ Root#a]
    5 [ users#a]
    6 [ age#a]
    7 [ FedEntity#b]
    8 [ username#b]
    9 [ *NodeWithName.id]
    10 [ id#a]
    0 -> 1 [ label = "Field" ]
    1 -> 2 [ label = "Field" ]
    1 -> 3 [ label = "Field" ]
    0 -> 4 [ label = "CreateChildResolver" ]
    0 -> 4 [ label = "HasChildResolver" ]
    4 -> 5 [ label = "CanProvide" ]
    5 -> 1 [ label = "Provides" ]
    5 -> 6 [ label = "CanProvide" ]
    6 -> 2 [ label = "Provides" ]
    5 -> 7 [ label = "CreateChildResolver" ]
    1 -> 7 [ label = "HasChildResolver" ]
    7 -> 8 [ label = "CanProvide" ]
    8 -> 3 [ label = "Provides" ]
    1 -> 9 [ label = "Field" ]
    7 -> 9 [ label = "RequiredBySubgraph" ]
    5 -> 10 [ label = "CanProvide" ]
    10 -> 9 [ label = "Provides" ]
}
