crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__interface__entity_interface_field-solved.snap
---
source: crates/engine/query-solver/src/tests/interface.rs
expression: "digraph {\n    0 [ label = \"root\", color=forestgreen ]\n    1 [ label = \"User.age\", color=forestgreen ]\n    2 [ label = \"NodeWithName.username\", color=forestgreen ]\n    3 [ label = \"Root#a\", shape=parallelogram, color=dodgerblue, color=forestgreen ]\n    4 [ label = \"users#a\", shape=box, color=dodgerblue, color=forestgreen ]\n    5 [ label = \"age#a\", shape=box, color=dodgerblue, color=forestgreen ]\n    6 [ label = \"FedEntity#b\", shape=parallelogram, color=dodgerblue, color=forestgreen ]\n    7 [ label = \"username#b\", shape=box, color=dodgerblue, color=forestgreen ]\n    8 [ label = \"*NodeWithName.id\", color=forestgreen ]\n    9 [ label = \"id#a\", shape=box, color=dodgerblue, color=forestgreen ]\n    10 [ label=\"\", style=dashed]\n    0 -> 3 [ label = <<b>1</b>>, color=forestgreen,fontcolor=forestgreen ]\n    3 -> 4 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    4 -> 5 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    5 -> 1 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    4 -> 6 [ label = <<b>1</b>>, color=forestgreen,fontcolor=forestgreen ]\n    6 -> 7 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    7 -> 2 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    4 -> 9 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    9 -> 8 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    10 -> 0 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n}\n"
---
digraph {
    0 [ label = "root", steiner=1 ]
    1 [ label = "User.age", steiner=1 ]
    2 [ label = "NodeWithName.username", steiner=1 ]
    3 [ label = "Root#a", steiner=1 ]
    4 [ label = "users#a", steiner=1 ]
    5 [ label = "age#a", steiner=1 ]
    6 [ label = "FedEntity#b", steiner=1 ]
    7 [ label = "username#b", steiner=1 ]
    8 [ label = "*NodeWithName.id", steiner=1 ]
    9 [ label = "id#a", steiner=1 ]
    10 [ label="", style=dashed]
    0 -> 3 [ cost=1, steiner=1]
    3 -> 4 [ cost=0, steiner=1]
    4 -> 5 [ cost=0, steiner=1]
    5 -> 1 [ cost=0, steiner=1]
    4 -> 6 [ cost=1, steiner=1]
    6 -> 7 [ cost=0, steiner=1]
    7 -> 2 [ cost=0, steiner=1]
    4 -> 9 [ cost=0, steiner=1]
    9 -> 8 [ cost=0, steiner=1]
    10 -> 0 [ cost=0, steiner=1]
}
