crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__interface__interface_field_providing_object_field-finalized-solution.snap
---
source: crates/engine/query-solver/src/tests/interface.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Root#b\", color=royalblue,shape=parallelogram ]\n    2 [ label = \"Query.anotherUsers\" ]\n    3 [ label = \"FedEntity#a\", color=royalblue,shape=parallelogram ]\n    4 [ label = \"User.age\" ]\n    5 [ label = \"*NodeWithName.id\" ]\n    0 -> 1 [ color=royalblue,fontcolor=royalblue ]\n    3 -> 5 [ color=orangered,arrowhead=inv ]\n    2 -> 3 [ color=royalblue,fontcolor=royalblue ]\n    1 -> 2 [  ]\n    2 -> 5 [  ]\n    3 -> 4 [  ]\n}\n"
---
digraph {
    0 [ label = "root" ]
    1 [ label = "Root#b" ]
    2 [ label = "Query.anotherUsers" ]
    3 [ label = "FedEntity#a" ]
    4 [ label = "User.age" ]
    5 [ label = "*NodeWithName.id" ]
    0 -> 1 [ label = "QueryPartition" ]
    3 -> 5 [ label = "RequiredBySubgraph" ]
    2 -> 3 [ label = "QueryPartition" ]
    1 -> 2 [ label = "Field" ]
    2 -> 5 [ label = "Field" ]
    3 -> 4 [ label = "Field" ]
}
