crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__interface__interface_field_providing_object_field-solver.snap
---
source: crates/engine/query-solver/src/tests/interface.rs
expression: "digraph {\n    0 [ label = \"root\", color=forestgreen ]\n    1 [ label = \"age\", style=dashed ]\n    2 [ label = \"Root#b\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    3 [ label = \"anotherUsers#b\", shape=box, color=dodgerblue, style=dashed ]\n    4 [ label = \"FedEntity#a\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    5 [ label = \"age#a\", shape=box, color=dodgerblue, style=dashed ]\n    6 [ label = \"*id\", style=dashed ]\n    7 [ label = \"id#b\", shape=box, color=dodgerblue, style=dashed ]\n    8 [ label=\"\", style=dashed]\n    0 -> 2 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    2 -> 3 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    3 -> 4 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    4 -> 5 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    5 -> 1 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    3 -> 7 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    7 -> 6 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    8 -> 0 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n}\n"
---
digraph {
    0 [ label = "root", steiner=1 ]
    1 [ label = "age", steiner=0 ]
    2 [ label = "Root#b", steiner=0 ]
    3 [ label = "anotherUsers#b", steiner=0 ]
    4 [ label = "FedEntity#a", steiner=0 ]
    5 [ label = "age#a", steiner=0 ]
    6 [ label = "*id", steiner=0 ]
    7 [ label = "id#b", steiner=0 ]
    8 [ label="", style=dashed]
    0 -> 2 [ cost=1, steiner=0]
    2 -> 3 [ cost=0, steiner=0]
    3 -> 4 [ cost=1, steiner=0]
    4 -> 5 [ cost=0, steiner=0]
    5 -> 1 [ cost=0, steiner=0]
    3 -> 7 [ cost=0, steiner=0]
    7 -> 6 [ cost=0, steiner=0]
    8 -> 0 [ cost=0, steiner=0]
}
